tests-system/visibility-1/output
Foo.T {}
^^^ visibility-1/bar.trlc:3: error: package must be imported before use
